--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,6 +1,10 @@
 /* =========================================
 =               06. Footer Css            =
 =========================================== */
+.footer-area-wrapper {
+  border-top: 1px solid #e2ded1;
+}
+
 .reveal-footer {
   position: fixed;
   bottom: 0;
