--- a/assets/scss/global/_default.scss
+++ b/assets/scss/global/_default.scss
@@ -433,13 +433,13 @@ input[type='checkbox'] {
   cursor: pointer;
 }
 .box-home {
-  background-color: #f4f5f7;
+  background-color: #e2ded1;
 }
 
 .page-box {
   max-width: 1330px;
   margin: auto;
-  background-color: #fff;
+  background-color: #f1efe9;
   .header-sticky.is-sticky {
     max-width: 1330px;
     margin: auto;
@@ -453,16 +453,16 @@ input[type='checkbox'] {
 ================================= */
 
 .breadcrumb-area {
-  background-color: #f4f5f7;
+  background-color: #e2ded1;
   background-repeat: no-repeat;
   background-position: center center;
   border-bottom-width: 0;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 36px;
+  padding-bottom: 36px;
   background-size: cover;
   @media #{$large-mobile,$tablet-device,$desktop-device} {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
@@ -470,8 +470,9 @@ input[type='checkbox'] {
   & li {
     display: inline-block;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: 2px;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.58;
     text-transform: uppercase;
     & a {
@@ -502,7 +503,7 @@ input[type='checkbox'] {
     }
   }
   @media #{$small-mobile} {
-    margin-top: 20px;
+    margin-top: 0px;
   }
 }
 
