--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -37,6 +37,7 @@
 
 /*=====  End of CSS Index  ====== */
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
 @import 'variabls';
 
 @import 'global/default';
