Add: ➕ 秋雨生対応

--- a/assets/scss/page-section/_product-details.scss
+++ b/assets/scss/page-section/_product-details.scss
@@ -2,6 +2,11 @@
 =        10. Product Details Css           =
 ========================================= */
 
+.product-details-content {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .product-details-thumbs-2 {
   float: left;
   width: 110px;
