--- a/assets/scss/global/_default.scss
+++ b/assets/scss/global/_default.scss
@@ -227,6 +227,10 @@ mark {
   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
 }
 
+.center {
+  margin: 0 auto;
+}
+
 /* -- Tab Content & Pane Fix -- */
 select {
   padding: 3px 20px;
