Add: ➕ 調整したよ

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,3 +73,10 @@ h3,
 h6 {
   font-weight: 500;
 }
+
+@media (max-width: 599px) {
+  .mainImg img {
+    height: 400px;
+    object-fit: cover;
+  }
+}
