--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,8 +11,8 @@
     animation: 0.95s ease-in-out 0s normal none 1 running fadeInDown;
     z-index: 999;
     transition: $transition--default;
-    box-shadow: 0 1px 1px 0 #f0f0f0;
-    background-color: #fff;
+    box-shadow: 0 1px 1px 0 #e2ded1;
+    background-color: #f1efe9;
     &.header_height-120 {
       height: 90px;
     }
