Add: ➕ notosans jp

--- a/assets/scss/page-section/_product-details.scss
+++ b/assets/scss/page-section/_product-details.scss
@@ -4,6 +4,12 @@
 
 .product-details-content {
   margin: 0 auto;
+  header {
+    letter-spacing: 0.9px;
+  }
+  .quickview-peragraph {
+    font-family: 'Noto Sans JP', sans-serif;
+  }
 }
 
 .product-details-thumbs-2 {
