--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,6 +39,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
 @import 'variabls';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 @import 'global/default';
 @import 'global/spacing';
