--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,7 +75,14 @@ h6 {
   font-weight: 500;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 767px) {
+  .mainImg img {
+    height: 700px;
+    object-fit: cover;
+  }
+}
+
+@media (max-width: 400px) {
   .mainImg img {
     height: 400px;
     object-fit: cover;
