--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -38,8 +38,8 @@
 /*=====  End of CSS Index  ====== */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 @import 'variabls';
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 @import 'global/default';
 @import 'global/spacing';
