--- a/assets/scss/page-section/_product-details.scss
+++ b/assets/scss/page-section/_product-details.scss
@@ -11,6 +11,9 @@
     font-family: 'Noto Sans JP', sans-serif;
   }
   dl {
+    @media #{$large-mobile} {
+      font-size: 14px;
+    }
     dt {
       float: left;
       font-weight: normal;
