--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,6 +75,12 @@ h6 {
   font-weight: 500;
 }
 
+.mainImg img {
+  display: block;
+  height: 100%;
+  height: auto;
+}
+
 @media (max-width: 767px) {
   .mainImg img {
     height: 700px;
