--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -94,3 +94,52 @@ h6 {
     object-fit: cover;
   }
 }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+img[lazy='loaded'] {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+img[lazy='loading'] {
+  margin: auto;
+}
+img[lazy-progressive='true'] {
+  width: 100% !important;
+  margin: auto;
+}
+img[lazy='error'] {
+  border-radius: 2px;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+.in-out-translate-fade-enter-active,
+.in-out-translate-fade-leave-active {
+  transition: all 0.5s;
+}
+.in-out-translate-fade-enter,
+.in-out-translate-fade-leave-active {
+  opacity: 0;
+}
+.in-out-translate-fade-enter {
+  transform: translate3d(100%, 0, 0);
+}
+.in-out-translate-fade-leave-active {
+  transform: translate3d(-100%, 0, 0);
+}
