--- a/assets/scss/global/_default.scss
+++ b/assets/scss/global/_default.scss
@@ -471,7 +471,7 @@ input[type='checkbox'] {
   @media #{$large-mobile} {
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-bottom: 20px !important;
+    // margin-bottom: 20px !important;
   }
 }
 
