--- a/assets/scss/elements/_products.scss
+++ b/assets/scss/elements/_products.scss
@@ -306,6 +306,7 @@
 .product-details-content {
   p {
     font-size: 16px;
+    font-feature-settings: 'palt';
     @media #{$large-mobile} {
       font-size: 14px;
       padding: 0 5vw;
