--- a/assets/scss/page-section/_product-details.scss
+++ b/assets/scss/page-section/_product-details.scss
@@ -4,18 +4,24 @@
 
 .product-details-content {
   margin: 0 auto;
-  font-family: 'A1 Gothic R';
   letter-spacing: 0.9px;
   header {
     letter-spacing: 0.9px;
+    h5 {
+      font-family: 'A1 Gothic R';
+    }
   }
 
-  .mood-content {
-    font-size: 17px;
-  }
   .en {
     font-size: 12px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
+  }
+  .mood-content {
+    font-family: 'A1 Gothic R';
+    font-size: 16px;
+    line-height: 2rem;
+    padding: 0 5vw;
+    font-feature-settings: 'palt';
   }
   dl {
     @media #{$large-mobile} {
