Add: ➕ レイアウト調整

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -110,6 +110,9 @@
 
 .copyright-text {
   display: block;
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 300;
 }
 
 /* =====  End of footer ====== */
