--- a/assets/scss/global/_default.scss
+++ b/assets/scss/global/_default.scss
@@ -449,6 +449,7 @@ input[type='checkbox'] {
     margin: auto;
     left: 0;
     right: 0;
+    padding-left: 20px;
   }
 }
 
@@ -461,8 +462,8 @@ input[type='checkbox'] {
   background-repeat: no-repeat;
   background-position: center center;
   border-bottom-width: 0;
-  padding-top: 36px;
-  padding-bottom: 36px;
+  padding-top: 20px;
+  padding-bottom: 19px;
   background-size: cover;
   @media #{$tablet-device,$desktop-device} {
     padding-top: 30px;
