--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,9 +3,10 @@
 ============================================= */
 
 .header-area--default {
-  height: 354px;
-  @media #{ $tablet-device, $large-mobile} {
+  height: 282px;
+  @media #{ $large-mobile} {
     height: 84px;
+    padding: 20px 0px 0 20px;
   }
 }
 
@@ -46,8 +47,8 @@
 
 .top-logo-area {
   border-bottom: 1px solid #e2ded1;
-  margin-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 30px;
+  padding-bottom: 30px;
 }
 .header-sticky {
   .logo__hidden {
@@ -122,11 +123,11 @@
   justify-content: flex-end;
   align-items: center;
   .header-right-items {
-    margin-left: 40px;
+    margin-right: 20px;
     a {
       font-size: 24px;
       &.mobile-navigation-icon {
-        font-size: 30px;
+        font-size: 25px;
         i {
           margin-bottom: 5px;
         }
@@ -549,10 +550,10 @@
       & > a {
         display: block;
         color: $black;
-        padding: 26px 2px;
+        padding: 24px 2px;
         position: relative;
-        font-size: 13px;
-        font-weight: 800;
+        font-size: 16px;
+        font-weight: 400;
         line-height: 1.18;
         letter-spacing: 0.9px;
         &:hover {
