--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,6 +59,7 @@
 @import 'page-section/cart-checkout';
 @import 'page-section/contact-us';
 @import 'page-section/preview';
+@import 'page-section/mood';
 
 @import 'elements/button';
 @import 'elements/featuted-product';
