Add: ➕ タイトル調整

--- a/assets/scss/page-section/_mood.scss
+++ b/assets/scss/page-section/_mood.scss
@@ -11,6 +11,15 @@
     font-family: 'A1 Gothic R';
     font-size: 20px;
     margin-bottom: 10px;
+    br {
+      display: none;
+    }
+    @media #{$large-mobile} {
+      line-height: 1.6;
+      br {
+        display: block;
+      }
+    }
   }
   h2 {
     color: #324851;
@@ -27,7 +36,7 @@
   padding: 0 5vw;
   font-feature-settings: 'palt';
   p.text {
-    color: #46211a;
+    color: #513b32;
     margin-bottom: 20px;
   }
   .side {
@@ -48,6 +57,6 @@
   .by {
     font-size: 11px;
     font-family: 'Open Sans', sans-serif;
-    margin-bottom: 150px;
+    margin-bottom: 120px;
   }
 }
