Add: ➕ スタイル調整

--- a/assets/scss/page-section/_mood.scss
+++ b/assets/scss/page-section/_mood.scss
@@ -8,7 +8,7 @@
   font-feature-settings: 'palt';
   h1 {
     color: #324851;
-    font-family: 'A1 Gothic R';
+    font-family: serif;
     font-size: 20px;
     margin-bottom: 10px;
     br {
