Add: ➕ サイズ調整

--- a/assets/scss/global/_default.scss
+++ b/assets/scss/global/_default.scss
@@ -447,6 +447,11 @@ input[type='checkbox'] {
     left: 0;
     right: 0;
     padding-left: 20px;
+    .logo__hidden {
+      img {
+        width: 80px !important;
+      }
+    }
   }
 }
 
