--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -60,6 +60,7 @@
 @import 'page-section/contact-us';
 @import 'page-section/preview';
 @import 'page-section/mood';
+@import 'page-section/beer';
 
 @import 'elements/button';
 @import 'elements/featuted-product';
