--- a/assets/scss/elements/_products.scss
+++ b/assets/scss/elements/_products.scss
@@ -529,6 +529,7 @@
   margin-top: 60px;
   display: flex;
   align-items: center;
+  justify-content: center;
   @media #{$large-mobile,$tablet-device} {
     margin-top: 30px;
   }
