--- a/assets/scss/elements/_products.scss
+++ b/assets/scss/elements/_products.scss
@@ -144,12 +144,13 @@
   .product-content {
     margin-top: 20px;
     .prodect-title {
-      font-size: 16px;
+      font-size: 13px;
       margin-bottom: 5px;
       letter-spacing: 0.9px;
+      font-weight: 300;
       .sub {
         display: block;
-        font-size: 12px;
+        font-size: 11px;
       }
     }
     .prodect-price {
