--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,10 +3,13 @@
 ============================================= */
 
 .header-area--default {
-  height: 282px;
+  height: 240px;
   @media #{ $large-mobile} {
-    height: 84px;
-    padding: 20px 0px 0 10px;
+    height: 60px;
+    padding: 11px 0px 0 10px;
+  }
+  > .row {
+    border-bottom: 1px solid #e2ded1;
   }
 }
 
@@ -46,9 +49,11 @@
 }
 
 .top-logo-area {
-  border-bottom: 1px solid #e2ded1;
-  margin-top: 30px;
+  margin-top: 29px;
   padding-bottom: 30px;
+  img {
+    height: 120px;
+  }
 }
 .header-sticky {
   .logo__hidden {
@@ -60,6 +65,10 @@
   @media #{$large-mobile} {
     .logo__hidden {
       display: inherit;
+      img {
+        display: block;
+        height: 20px;
+      }
     }
     .content__hidden {
       display: none !important;
@@ -123,11 +132,17 @@
   justify-content: flex-end;
   align-items: center;
   .header-right-items {
-    margin-right: 0px;
+    margin-right: 15px;
     a {
       font-size: 24px;
       &.mobile-navigation-icon {
+        line-height: 1;
         font-size: 25px;
+        margin-top: 5px;
+        .is-sticky & {
+          line-height: 55px;
+          margin-top: 5px;
+        }
         i {
           margin-bottom: 5px;
         }
@@ -550,11 +565,11 @@
       & > a {
         display: block;
         color: $black;
-        padding: 24px 2px;
+        padding: 23px 2px 24px;
         position: relative;
         font-size: 13px;
         font-weight: 400;
-        line-height: 1.18;
+        line-height: 1;
         letter-spacing: 0.9px;
         &:hover {
           color: #dcb14a;
