Add: ➕ 調整レイアウオt

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,9 +11,9 @@
 }
 
 .header-sticky {
-  > .row {
-    border-bottom: 1px solid #e2ded1;
-  }
+  // > .row {
+  //   border-bottom: 1px solid #e2ded1;
+  // }
   &.is-sticky {
     position: fixed;
     top: 0;
