--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -3,6 +3,9 @@
 =========================================== */
 .footer-area-wrapper {
   border-top: 1px solid #e2ded1;
+  .container-fluid {
+    padding: 0 30px;
+  }
 }
 
 .reveal-footer {
