Add: ➕ mood pub

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -71,6 +71,7 @@
 @import 'elements/banner-product';
 @import 'elements/shopping-support';
 @import 'elements/brand';
+@import 'elements/pub';
 
 h3,
 h6 {
